--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ platform_packages =
     platformio/tool-renode
 test_testing_command =
     ${platformio.packages_dir}/tool-renode/bin/renode
-    ;--disable-xwt
+    --disable-xwt
     -e mach create "stm32f072b"
     -e machine LoadPlatformDescription @platforms/boards/stm32f072b_discovery.repl
     -e sysbus LoadELF @${platformio.build_dir}/${this.__env__}/firmware.elf
